--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,14 @@
 app:
-   numThreads: 5
+   num-threads: 2
+   stress-method: fatorial
    
 loop:
-   count: 9999999999
-   maxCount: 1000000
-   
+   count: 999999999999999
+   maxCount: 999999999999999
+
+factorial:
+   number: 10
+
 logging:
   level:
     br:
